PB-2179: add apache tracing

--- a/.env.ci
+++ b/.env.ci
@@ -24,3 +24,15 @@ DISABLE_POLYFILL=false
 POLYFILL_URL="//cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?version=4.8.0&features=fetch,requestAnimationFrame,Element.prototype.classList,URL"
 OPENTRANS_URL=https://dummy.com/api
 OPENTRANS_API_KEY=dummy-key
+
+# OpenTelemetry Configuration
+OTEL_APACHE_MODULE_ENABLED=ON
+OTEL_EXPORTER=otlp
+OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+OTEL_SERVICE_NAME=service-chsdi3
+OTEL_SERVICE_NAMESPACE=geoadmin
+OTEL_SERVICE_INSTANCE_ID=service-chsdi3-ci
+OTEL_SPAN_PROCESSOR=batch
+OTEL_RESOLVE_BACKENDS=ON
+OTEL_PROPAGATOR_TYPE=w3c
+OTEL_SAMPLER=AlwaysOn
