PB-2179: use the same setup as other services

--- a/.env.default
+++ b/.env.default
@@ -35,7 +35,7 @@ OPENTRANS_API_KEY=dummy-key
 # OpenTelemetry Configuration
 OTEL_APACHE_MODULE_ENABLED=ON
 OTEL_EXPORTER=otlp
-OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=jaeger:4317
 OTEL_SERVICE_NAME=service-chsdi3
 OTEL_SERVICE_NAMESPACE=geoadmin
 OTEL_SERVICE_INSTANCE_ID=service-chsdi3-local
