--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,13 @@ logging-utilities = "~=5.1"
 pyramid-exclog = "~=1.1"
 GeoAlchemy2 = "~=0.18"
 setuptools = "<81"  # https://github.com/Pylons/pyramid/issues/3731
+# OpenTelemetry instrumentation
+opentelemetry-sdk = "~=1.39"
+opentelemetry-exporter-otlp = "~=1.39"
+opentelemetry-instrumentation = "0.60b1"
+opentelemetry-instrumentation-pyramid = "0.60b1"
+opentelemetry-instrumentation-sqlalchemy = "0.60b1"
+opentelemetry-instrumentation-requests = "0.60b1"
 
 [dev-packages]
 waitress = "*"
