--- a/chsdi/config/base.ini.in
+++ b/chsdi/config/base.ini.in
@@ -18,7 +18,8 @@ pyramid.debug_routematch = false
 pyramid.prevent_http_cache = false
 pyramid.default_locale_name = de
 pyramid.includes = pyramid_tm
-pyramid.tweens = chsdi.logging_tweens.logging_context_tween
+pyramid.tweens = opentelemetry.instrumentation.pyramid.trace_tween_factory
+                 chsdi.logging_tweens.logging_context_tween
                  pyramid_exclog.exclog_tween_factory
                  pyramid.tweens.excview_tween_factory
 
