PB-2179: add logging telemetry

--- a/.env.ci
+++ b/.env.ci
@@ -36,3 +36,13 @@ OTEL_SPAN_PROCESSOR=batch
 OTEL_RESOLVE_BACKENDS=ON
 OTEL_PROPAGATOR_TYPE=w3c
 OTEL_SAMPLER=AlwaysOn
+
+# OpenTelemetry Configuration for Python
+OTEL_SDK_DISABLED=false
+OTEL_ENABLE_PYRAMID=true
+OTEL_ENABLE_SQLALCHEMY=true
+OTEL_ENABLE_REQUESTS=true
+OTEL_ENABLE_LOGGING=true
+OTEL_EXPORTER_OTLP_INSECURE=true
+OTEL_RESOURCE_ATTRIBUTES=service.name=mf-chsdi3
+OTEL_PYTHON_EXCLUDED_URLS="checker,static/*"
