--- a/.env.default
+++ b/.env.default
@@ -49,6 +49,7 @@ OTEL_SDK_DISABLED=false
 OTEL_ENABLE_PYRAMID=true
 OTEL_ENABLE_SQLALCHEMY=true
 OTEL_ENABLE_REQUESTS=true
+OTEL_ENABLE_LOGGING=true
 OTEL_EXPORTER_OTLP_INSECURE=true
 OTEL_RESOURCE_ATTRIBUTES=service.name=mf-chsdi3
 OTEL_PYTHON_EXCLUDED_URLS="checker,static/*"
