PB-2179: update logging configuration for OTEL

--- a/chsdi/config/logging-cfg-local.yml
+++ b/chsdi/config/logging-cfg-local.yml
@@ -50,6 +50,9 @@ formatters:
         duration: "%(duration)s"
         payload: response.payload
       message: message
+      otelSpanID: otelSpanID
+      otelTraceID: otelTraceID
+      otelTraceSampled: otelTraceSampled
 
 handlers:
   console:
